--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -3,3 +3,11 @@ login = AntonReedus
 password = QAandersen2021
 pageAfterLogin = LiveInternet @ Статистика и дневники, почта и поиск
 pageAfterCreatingArticle = Рейтинги LiveInternet.Ru
+
+editPostPageTitle = Редактирование сообщения
+
+#данные для удаления поста
+postId = post486766547
+
+#данные для изменения названия дневника
+diaryTitle = Бессмысленная писанина
