--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -7,7 +7,7 @@ pageAfterCreatingArticle = Рейтинги LiveInternet.Ru
 editPostPageTitle = Редактирование сообщения
 
 #данные для удаления поста
-postId = post486766547
+postId = post486794479
 
 #данные для изменения названия дневника
-diaryTitle = Бессмысленная писанина
+diaryTitle = Какой-то дневник
